// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> Component tests matches snapshots 1`] = `
<div
  className="abt-tooltip abt-tooltip--active"
  id="test"
  role="tooltip"
  style={
    Object {
      "transform": "",
    }
  }
>
  Hello World
  <style
    jsx={true}
  >
    
                    .abt-tooltip {
                        pointer-events: none;
                        transform-origin: top center;
                        z-index: 1000;
                        background: rgba(66, 66, 66, 0.9);
                        border-radius: 2px;
                        color: white;
                        display: inline-block;
                        visibility: hidden;
                        font-size: 10px;
                        font-weight: 500;
                        line-height: 14px;
                        position: absolute;
                        padding: 8px;
                        text-align: center;
                        max-width: 170px;
                    }
                    .abt-tooltip--active {
                        visibility: visible;
                    }
                
  </style>
</div>
`;

exports[`<Tooltip /> Component tests matches snapshots 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,7 @@
  <div
-   className=\\"abt-tooltip abt-tooltip--active\\"
+   className=\\"abt-tooltip\\"
    id=\\"test\\"
    role=\\"tooltip\\"
    style={
      Object {
        \\"transform\\": \\"\\","
`;

exports[`<Tooltip /> Component tests matches snapshots 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    className=\\"abt-tooltip abt-tooltip--active\\"
    id=\\"test\\"
    role=\\"tooltip\\"
    style={
      Object {
-       \\"transform\\": \\"\\",
+       \\"transform\\": \\"translateX(50%)\\",
      }
    }
  >
    Hello World
    <style"
`;
